k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: scalekit
  labels:
    app: scalekit
    environment: production
